:bug: style(caroussel): adjust overflow and title font size for mobile (smartphone and tablet included)

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -347,6 +347,10 @@
     body.about .main-header .menu .menu-item-special {
         display: none;
     }
+
+    .residence-swiper {
+        overflow: visible !important;
+    }
 }
 
 @media (max-width: 768px) {
@@ -366,5 +370,9 @@
 
     #content-residences-modal .content-residence.alix-caen .content-thumbnail-description .title {
         text-align: center;
+    }
+
+    .residences-list .residence .residence-name .residence-title {
+        font-size: 20px;
     }
 }
